# library-system

./: .gitignore  CMakeLists.txt  main.cpp
data/: schema.txt
include/: Database.cpp  Database.h  Library.cpp  Library.h  User.cpp  User.h
src/: Book.cpp  Database.cpp  User.cpp
